RESOLVED FIXED188958
Using _WKRemoteObjectInterface with a protocol that inherits from a non-NSObject protocol crashes
https://bugs.webkit.org/show_bug.cgi?id=188958
Summary Using _WKRemoteObjectInterface with a protocol that inherits from a non-NSObj...
Sam Weinig
Reported 2018-08-26 18:24:05 PDT
Using _WKRemoteObjectInterface with a protocol that inherits from a non-NSObject protocol crashes
Attachments
Crash Log (152.76 KB, text/plain)
2018-08-26 18:24 PDT, Sam Weinig
no flags
Patch (3.45 KB, patch)
2018-08-26 18:27 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2018-08-26 18:24:37 PDT
Created attachment 348107 [details] Crash Log
Sam Weinig
Comment 2 2018-08-26 18:27:04 PDT
Radar WebKit Bug Importer
Comment 3 2018-08-26 18:27:47 PDT Comment hidden (obsolete)
Radar WebKit Bug Importer
Comment 4 2018-08-26 18:28:10 PDT
WebKit Commit Bot
Comment 5 2018-08-26 19:45:59 PDT
Comment on attachment 348108 [details] Patch Clearing flags on attachment: 348108 Committed r235346: <https://trac.webkit.org/changeset/235346>
WebKit Commit Bot
Comment 6 2018-08-26 19:46:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.