Using _WKRemoteObjectInterface with a protocol that inherits from a non-NSObject protocol crashes https://bugs.webkit.org/show_bug.cgi?id=188958

Patch by Sam Weinig <sam@webkit.org> on 2018-08-26
Reviewed by Anders Carlsson.

Source/WebKit:

* Shared/API/Cocoa/_WKRemoteObjectInterface.mm:
(initializeMethods):
Fix infinite recursion by using the passed in protocol rather
than always using the one from the initial interface.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistry.h:
Update test protocol to have inheritance.

Canonical link: https://commits.webkit.org/204007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235346 268f45cc-cd09-0410-ab3c-d52691b4dbfc